--- a/infra/web/nginx.conf
+++ b/infra/web/nginx.conf
@@ -1,14 +1,15 @@
-user nginx;
-worker_processes auto;
+# user nginx;
+# worker_processes auto;
 
 events {
-  worker_connections 1024;
-}
+  # worker_connections 1024;
+  }
 
 http{
   upstream app {
     server unix:///app/tmp/sockets/puma.sock;
   }
+}
 
   server {
     listen 80;
@@ -31,4 +32,3 @@ http{
       proxy_pass http://app;
     }
   }
-}
