--- a/infra/web/nginx.conf
+++ b/infra/web/nginx.conf
@@ -1,5 +1,6 @@
   upstream app {
-    server unix:///app/tmp/sockets/puma.sock;
+    # server unix:///app/tmp/sockets/puma.sock;
+    server unix:///tmp/sockets/puma.sock;
   }
 
   server {
