--- a/heroku.yml
+++ b/heroku.yml
@@ -8,8 +8,9 @@ setup:
     RAILS_SERVE_STATIC_FILES: enabled
 build:
   docker:
-    web: Dockerfile.heroku
-  config:
-    WORKDIR: app
+    web: Dockerfile.app-heroku
+    web: Dockerfile.web-heroku
+  # config:
+  #   WORKDIR: app
 run:
   web: bundle exec puma -C config/puma.rb
