--- a/Dockerfile.app-heroku
+++ b/Dockerfile.app-heroku
@@ -19,3 +19,6 @@ COPY . ./
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
 ENTRYPOINT ["entrypoint.sh"]
+
+RUN mkdir -p /tmp/pids
+RUN mkdir -p /tmp/sockets
