--- a/heroku.yml
+++ b/heroku.yml
@@ -12,4 +12,5 @@ build:
   # config:
   #   WORKDIR: app
 run:
+  # web: bundle exec puma -C config/puma.rb
   web: bundle exec puma -C config/puma.rb
