--- a/heroku.yml
+++ b/heroku.yml
@@ -13,4 +13,4 @@ build:
   #   WORKDIR: app
 run:
   # web: bundle exec puma -C config/puma.rb
-  web: bundle exec puma -C config/puma.rb
+  web: bundle exec puma
