--- a/heroku.yml
+++ b/heroku.yml
@@ -12,5 +12,4 @@ build:
   # config:
   #   WORKDIR: app
 run:
-  # web: bundle exec puma -C config/puma.rb
-  web: bundle exec puma
+  web: bundle exec puma -C config/puma.rb
