--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build and test with Rake
         env:
           RAILS_ENV: test
-          DATABASE_URL: mysql2://root:password@localhost:3306/test
+          DATABASE_URL: mysql2://root:password@db:3306/test
         run: |
           bundle exec rails db:create
           bundle exec rails db:schema:load
