--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,14 @@ jobs:
           gem install bundler
           bundle config set path 'vendor/bundle'
           bundle install --jobs 4 --retry 3
+      - name: Wait for MySQL
+        run: |
+          for i in {1..10}; do
+            nc -z localhost 3306 && echo Success && exit 0
+            echo -n .
+            sleep 1
+          done
+          echo Failed waiting for MySQL && exit 1
       - name: Build and test with Rake
         env:
           RAILS_ENV: test
