--- a/config/database.yml
+++ b/config/database.yml
@@ -27,9 +27,9 @@ development:
 test:
   <<: *default
   database: app_test
-  username: root
-  password: password
-  host: localhost
+  username: <%= ENV.fetch("DB_USERNAME", "root") %>
+  password: <%= ENV.fetch("DB_PASSWORD", "rootpassword") %>
+  host: <%= ENV.fetch("DB_HOST", "db") %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
