--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Wait for MySQL
         run: |
           for i in {1..10}; do
-            nc -z localhost 3306 && echo Success && exit 0
+            nc -z db 3306 && echo Success && exit 0
             echo -n .
             sleep 1
           done
